# Shujufenxi_1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MASTER_PROMPT.md  Makefile  README.md  START_HERE.md  design-qa.md  docker-compose.prod.yml  docker-compose.yml  make.cmd  netlify.toml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_hourly_comparison.py  0003_release_hardening.py  0004_anchor_roi_alerting.py  0005_anchor_trend_summaries.py  0006_rbac_data_scope.py
apps/api/app/: __init__.py  main.py
apps/api/app/admin/: __init__.py  router.py  (+1 more)
apps/api/scripts/: migrate_sqlite_to_postgres.py
apps/api/tests/: conftest.py  test_admin_safety.py  test_aggregation.py  test_alerts.py  test_analysis_service.py  test_anchor_trend_delivery.py  test_anchor_trends.py  test_auth_permissions.py  test_celery_tasks.py  test_cleaning.py  test_config.py  test_csrf_route_coverage.py  test_dashboard_api.py  test_data_freshness.py  test_database_migration.py  test_db_session.py  test_deployment_safety.py  test_excel_fixture.py  test_export_room_permissions.py  test_export_security.py  test_feishu_base_export.py  test_feishu_client.py  test_feishu_sync_service.py  test_fixture_database_sync.py  test_health.py  test_hourly_comparison.py  test_hourly_comparison_alerts.py  test_hourly_comparison_api.py  test_hourly_fact_service.py  test_migrations.py  test_models.py  test_permission_seed.py  test_rbac_data_scope.py  test_role_hierarchy.py  test_room_resolution.py  test_windows_runtime_scripts.py
(+201 files in other folders)
